Improve chat rendering